<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginLeft="@dimen/dialog_tv_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_game_name" />

        <EditText
            android:id="@+id/et_game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_bad_game_name"
            android:text="@string/tv_bad_game_name"
            android:textStyle="italic"
            android:textColor="@color/colorError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:layout_marginLeft="@dimen/dialog_tv_margin"
            android:layout_marginTop="@dimen/dialog_tv_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_game_wor" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5">

            <EditText
                android:id="@+id/et_game_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/cb_show_word_to_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/tv_show_game_word"
                android:layout_weight="3"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_bad_game_word"
            android:text="@string/tv_bad_game_word"
            android:textStyle="italic"
            android:textColor="@color/colorError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_draw_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/tv_draw_permission"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/button_create_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_game_button_title" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/creation_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>